[tool.poetry]
name = "jsonapy"
version = "0.1.0"
description = "Library for dumping models into JSON:API"
authors = ["Guillaume Fayard <guillaume.fayard@pycolore.fr>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
