[tool.poetry]
name = "jsonapy"
version = "0.1.1"
description = "Library for dumping models into JSON:API"
authors = ["Guillaume Fayard <guillaume.fayard@pycolore.fr>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/Arkelis/jsonapy"


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "*"
ipython = "*"
pdoc = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
