[tool.poetry]
name = "jsonapy"
version = "0.1.2.dev"
description = "Library for dumping models into JSON:API"
authors = ["Guillaume Fayard <guillaume.fayard@pycolore.fr>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Arkelis/jsonapy"
documentation = "https://jsonapy.pycolore.fr/jsonapy.html"
classifiers = ["Topic :: Software Development :: Libraries :: Python Modules "]
keywords = ["json", "json-api", "export", "serialization"]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "*"
ipython = "*"
pdoc = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
